--- a/EGMII.P.I.D/lib/nblibraries.properties
+++ b/EGMII.P.I.D/lib/nblibraries.properties
@@ -6,33 +6,6 @@ libs.groovy-all.classpath=\
     ${base}/groovy-all/groovy-all.jar
 libs.groovy-all.displayName=Groovy 2.1.7
 libs.groovy-all.prop-maven-dependencies=org.codehaus.groovy:groovy-all:2.1.7:jar
-libs.JasperReports.classpath=\
-    ${base}/JasperReports/commons-collections-3.2.1.jar;\
-    ${base}/JasperReports/commons-logging-1.1.jar;\
-    ${base}/JasperReports/jaxen-1.1.1.jar;\
-    ${base}/JasperReports/jcommon-1.0.15.jar;\
-    ${base}/JasperReports/jfreechart-1.0.12.jar;\
-    ${base}/JasperReports/jpa.jar;\
-    ${base}/JasperReports/png-encoder-1.5.jar;\
-    ${base}/JasperReports/xalan.jar;\
-    ${base}/JasperReports/xml-apis.jar;\
-    ${base}/JasperReports/batik-anim.jar;\
-    ${base}/JasperReports/batik-awt-util.jar;\
-    ${base}/JasperReports/batik-bridge.jar;\
-    ${base}/JasperReports/batik-css.jar;\
-    ${base}/JasperReports/batik-dom.jar;\
-    ${base}/JasperReports/batik-ext.jar;\
-    ${base}/JasperReports/batik-gvt.jar;\
-    ${base}/JasperReports/batik-parser.jar;\
-    ${base}/JasperReports/batik-script.jar;\
-    ${base}/JasperReports/batik-svg-dom.jar;\
-    ${base}/JasperReports/batik-svggen.jar;\
-    ${base}/JasperReports/batik-util.jar;\
-    ${base}/JasperReports/batik-xml.jar;\
-    ${base}/JasperReports/xml-apis-ext.jar;\
-    ${base}/JasperReports/castor-1.2.jar;\
-    ${base}/JasperReports/barbecue-1.5-beta1.jar
-libs.JasperReports.displayName=JasperReports 3.0.1
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar:\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar:\
@@ -47,3 +20,30 @@ libs.jstl.displayName=JSTL 1.2.2
 libs.jstl.javadoc=\
     ${base}/jstl/javaee-doc-api.jar
 libs.jstl.prop-maven-dependencies=\n                javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1:jar\n                org.glassfish.web:javax.servlet.jsp.jstl:1.2.2:jar\n            
+libs.spring-framework400.classpath=\
+    ${base}/spring-framework400/org-apache-commons-logging.jar:\
+    ${base}/spring-framework400/cglib-2.2.jar:\
+    ${base}/spring-framework400/spring-aop-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-aspects-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-beans-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-build-src-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-context-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-context-support-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-core-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-expression-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-framework-bom-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-instrument-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-instrument-tomcat-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-jdbc-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-jms-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-messaging-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-orm-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-oxm-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-test-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-tx-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-web-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-webmvc-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-webmvc-portlet-4.0.1.RELEASE.jar:\
+    ${base}/spring-framework400/spring-websocket-4.0.1.RELEASE.jar
+libs.spring-framework400.displayName=Spring Framework 4.0.1
+libs.spring-framework400.prop-maven-dependencies=\n                spring-aop-4.0.1.RELEASE:jar\n                spring-aspects-4.0.1.RELEASE:jar\n                spring-beans-4.0.1.RELEASE:jar\n                spring-build-src-4.0.1.RELEASE:jar\n                spring-context-4.0.1.RELEASE:jar\n                spring-context-support-4.0.1.RELEASE:jar\n                spring-core-4.0.1.RELEASE:jar\n                spring-expression-4.0.1.RELEASE:jar\n                spring-framework-bom-4.0.1.RELEASE:jar\n                spring-instrument-4.0.1.RELEASE:jar\n                spring-instrument-tomcat-4.0.1.RELEASE:jar\n                spring-jdbc-4.0.1.RELEASE:jar\n                spring-jms-4.0.1.RELEASE:jar\n                spring-messaging-4.0.1.RELEASE:jar\n                spring-orm-4.0.1.RELEASE:jar\n                spring-oxm-4.0.1.RELEASE:jar\n                spring-test-4.0.1.RELEASE:jar\n                spring-tx-4.0.1.RELEASE:jar\n                spring-web-4.0.1.RELEASE:jar\n                spring-webmvc-4.0.1.RELEASE:jar\n                spring-webmvc-portlet-4.0.1.RELEASE:jar\n                spring-websocket-4.0.1.RELEASE:jar\n            
