--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.json-20090211.jar=lib/json-20090211.jar
 file.reference.junit-4.10.jar=lib/junit-4.10.jar
 file.reference.mysql-connector-java-5.1.36-bin.jar=lib/mysql-connector-java-5.1.36-bin.jar
 file.reference.nekohtml-0.9.5.jar=lib/nekohtml-0.9.5.jar
+file.reference.xercesImpl-2.6.1.jar=lib/xercesImpl-2.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -60,8 +61,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.jstl.classpath}:\
-    ${libs.groovy-all.classpath}:\
     ${file.reference.commons-beanutils-1.9.2.jar}:\
     ${file.reference.commons-collections-3.2.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
@@ -70,16 +69,19 @@ javac.classpath=\
     ${file.reference.httpunit.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.jasperreports-6.1.1.jar}:\
+    ${file.reference.javax.faces.jar}:\
+    ${file.reference.joda-time-2.4.jar}:\
     ${file.reference.jasperreports-fonts-6.1.1.jar}:\
     ${file.reference.jasperreports-functions-6.1.1.jar}:\
     ${file.reference.jasperreports-javaflow-6.1.1.jar}:\
-    ${file.reference.javax.faces.jar}:\
-    ${file.reference.joda-time-2.4.jar}:\
     ${file.reference.js-1.6R5.jar}:\
     ${file.reference.json-20090211.jar}:\
     ${file.reference.junit-4.10.jar}:\
     ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
-    ${file.reference.nekohtml-0.9.5.jar}
+    ${file.reference.nekohtml-0.9.5.jar}:\
+    ${file.reference.xercesImpl-2.6.1.jar}:\
+    ${libs.jstl.classpath}:\
+    ${libs.groovy-all.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -106,7 +108,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
