--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>ChangePassword</servlet-name>
         <servlet-class>Controller_Base.ChangePassword</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SetProductIDServlet</servlet-name>
+        <servlet-class>Controller_SetFormNumber.SetProductIDServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/BaseServlet</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>ChangePassword</servlet-name>
         <url-pattern>/ChangePassword</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetProductIDServlet</servlet-name>
+        <url-pattern>/SetProductIDServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
