--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>SetProductIDServlet</servlet-name>
         <servlet-class>Controller_SetFormNumber.SetProductIDServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SearchItemServlet</servlet-name>
+        <servlet-class>Controller_Json.SearchItemServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/BaseServlet</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>SetProductIDServlet</servlet-name>
         <url-pattern>/SetProductIDServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SearchItemServlet</servlet-name>
+        <url-pattern>/SearchItemServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
