Product DAO and Consumption Report

--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -28,6 +28,14 @@
         <servlet-name>SetItemServlet</servlet-name>
         <servlet-class>Controller_Json.SetItemServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SetSPONumberServlet</servlet-name>
+        <servlet-class>Controller_SetFormNumber.SetSPONumberServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SetSubconNumberServlet</servlet-name>
+        <servlet-class>Controller_SetFormNumber.SetSubconNumberServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/BaseServlet</url-pattern>
@@ -55,6 +63,14 @@
     <servlet-mapping>
         <servlet-name>SetItemServlet</servlet-name>
         <url-pattern>/SetItemServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetSPONumberServlet</servlet-name>
+        <url-pattern>/SetSPONumberServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetSubconNumberServlet</servlet-name>
+        <url-pattern>/SetSubconNumberServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
