--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -60,6 +60,10 @@
         <servlet-name>EncodeProductServlet</servlet-name>
         <servlet-class>Controller_Encode.EncodeProductServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EncodeConsumptionReportServlet</servlet-name>
+        <servlet-class>Controller_Encode.EncodeConsumptionReportServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SearchProductServlet</servlet-name>
         <url-pattern>/SearchProductServlet</url-pattern>
@@ -119,6 +123,10 @@
     <servlet-mapping>
         <servlet-name>EncodeProductServlet</servlet-name>
         <url-pattern>/EncodeProductServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EncodeConsumptionReportServlet</servlet-name>
+        <url-pattern>/EncodeConsumptionReportServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
