--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -80,6 +80,10 @@
         <servlet-name>EncodeSupplierPurchaseOrderServlet</servlet-name>
         <servlet-class>Controller_Encode.EncodeSupplierPurchaseOrderServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ApproveSupplierPurchaseOrderServlet</servlet-name>
+        <servlet-class>Controller_Approve.ApproveSupplierPurchaseOrderServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SearchProductServlet</servlet-name>
         <url-pattern>/SearchProductServlet</url-pattern>
@@ -159,6 +163,10 @@
     <servlet-mapping>
         <servlet-name>EncodeSupplierPurchaseOrderServlet</servlet-name>
         <url-pattern>/EncodeSupplierPurchaseOrderServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ApproveSupplierPurchaseOrderServlet</servlet-name>
+        <url-pattern>/ApproveSupplierPurchaseOrderServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
