on Click Supplier

--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -88,6 +88,10 @@
         <servlet-name>ApproveSubconPurchaseOrderServlet</servlet-name>
         <servlet-class>Controller_Approve.ApproveSubconPurchaseOrderServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SetApprovalSupplierPO</servlet-name>
+        <servlet-class>Controller_Json.SetApprovalSupplierPO</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SearchProductServlet</servlet-name>
         <url-pattern>/SearchProductServlet</url-pattern>
@@ -175,6 +179,10 @@
     <servlet-mapping>
         <servlet-name>ApproveSubconPurchaseOrderServlet</servlet-name>
         <url-pattern>/ApproveSubconPurchaseOrderServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetApprovalSupplierPO</servlet-name>
+        <url-pattern>/SetApprovalSupplierPO</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
