--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -78,7 +78,8 @@ javac.classpath=\
     ${libs.CopyLibs.classpath}:\
     ${libs.javaee-endorsed-api-6.0.classpath}:\
     ${file.reference.junit-4.10.jar}:\
-    ${file.reference.mysql-connector-java-5.1.36-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
+    ${libs.groovy-all.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
