--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -29,26 +29,26 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-beanutils-1.9.2.jar=lib/commons-beanutils-1.9.2.jar
-file.reference.commons-collections-3.2.jar=lib/commons-collections-3.2.jar
-file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
-file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.commons-beanutils-1.9.2.jar=lib\\commons-beanutils-1.9.2.jar
+file.reference.commons-collections-3.2.jar=lib\\commons-collections-3.2.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
 file.reference.groovy-all.jar=lib/groovy-all/groovy-all.jar
-file.reference.gson-2.3.1.jar=lib/gson-2.3.1.jar
-file.reference.httpunit.jar=lib/httpunit.jar
-file.reference.itext-2.1.7.jar=lib/itext-2.1.7.jar
-file.reference.jasperreports-6.1.1.jar=lib/jasperreports-6.1.1.jar
-file.reference.jasperreports-fonts-6.1.1.jar=lib/jasperreports-fonts-6.1.1.jar
-file.reference.jasperreports-functions-6.1.1.jar=lib/jasperreports-functions-6.1.1.jar
-file.reference.jasperreports-javaflow-6.1.1.jar=lib/jasperreports-javaflow-6.1.1.jar
-file.reference.javax.faces.jar=lib/javax.faces.jar
-file.reference.joda-time-2.4.jar=lib/joda-time-2.4.jar
-file.reference.js-1.6R5.jar=lib/js-1.6R5.jar
-file.reference.json-20090211.jar=lib/json-20090211.jar
-file.reference.junit-4.10.jar=lib/junit-4.10.jar
-file.reference.mysql-connector-java-5.1.36-bin.jar=lib/mysql-connector-java-5.1.36-bin.jar
-file.reference.nekohtml-0.9.5.jar=lib/nekohtml-0.9.5.jar
-file.reference.xercesImpl-2.6.1.jar=lib/xercesImpl-2.6.1.jar
+file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
+file.reference.httpunit.jar=lib\\httpunit.jar
+file.reference.itext-2.1.7.jar=lib\\itext-2.1.7.jar
+file.reference.jasperreports-6.1.1.jar=lib\\jasperreports-6.1.1.jar
+file.reference.jasperreports-fonts-6.1.1.jar=lib\\jasperreports-fonts-6.1.1.jar
+file.reference.jasperreports-functions-6.1.1.jar=lib\\jasperreports-functions-6.1.1.jar
+file.reference.jasperreports-javaflow-6.1.1.jar=lib\\jasperreports-javaflow-6.1.1.jar
+file.reference.javax.faces.jar=lib\\javax.faces.jar
+file.reference.joda-time-2.4.jar=lib\\joda-time-2.4.jar
+file.reference.js-1.6R5.jar=lib\\js-1.6R5.jar
+file.reference.json-20090211.jar=lib\\json-20090211.jar
+file.reference.junit-4.10.jar=lib\\junit-4.10.jar
+file.reference.mysql-connector-java-5.1.36-bin.jar=lib\\mysql-connector-java-5.1.36-bin.jar
+file.reference.nekohtml-0.9.5.jar=lib\\nekohtml-0.9.5.jar
+file.reference.xercesImpl-2.6.1.jar=lib\\xercesImpl-2.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -83,7 +83,26 @@ javac.classpath=\
     ${file.reference.nekohtml-0.9.5.jar}:\
     ${file.reference.xercesImpl-2.6.1.jar}:\
     ${libs.CopyLibs.classpath}:\
-    ${file.reference.groovy-all.jar}
+    ${file.reference.groovy-all.jar}:\
+    ${file.reference.commons-beanutils-1.9.2.jar}:\
+    ${file.reference.commons-collections-3.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.httpunit.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.1.1.jar}:\
+    ${file.reference.jasperreports-fonts-6.1.1.jar}:\
+    ${file.reference.jasperreports-functions-6.1.1.jar}:\
+    ${file.reference.jasperreports-javaflow-6.1.1.jar}:\
+    ${file.reference.javax.faces.jar}:\
+    ${file.reference.joda-time-2.4.jar}:\
+    ${file.reference.js-1.6R5.jar}:\
+    ${file.reference.json-20090211.jar}:\
+    ${file.reference.junit-4.10.jar}:\
+    ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
+    ${file.reference.nekohtml-0.9.5.jar}:\
+    ${file.reference.xercesImpl-2.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
